# cuda-vmm-allocator

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cc
src/backend/: backend_runner.h  llama_runner.cc  llama_runner.h  onnx_runner.cc  onnx_runner.h
src/cuda/: cuda_device.cc  cuda_device.h  cuda_error.cc  cuda_error.h  cuda_stream.cc  cuda_stream.h
src/interpose/: intercept_hook.cc  intercept_hook.h  intercept_real.cc  intercept_real.h  intercept_types.h
src/swap/: swap_context.cc  swap_context.h  swap_manager.cc  swap_manager.h
src/util/: timer.h
src/vmm/: vmm_allocator.cc  vmm_allocator.h  vmm_dedup.cc  vmm_dedup.h  vmm_pool.cc  vmm_pool.h  vmm_probe.cc  vmm_probe.h  vmm_types.h
